[gd_scene load_steps=30 format=2]

[ext_resource path="res://src/ShotgunTower.gd" type="Script" id=1]
[ext_resource path="res://assets/towers/shotgun_tower/shotgun_tower_1.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/laser_shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/healthbar_green.png" type="Texture" id=4]
[ext_resource path="res://assets/towers/shotgun_tower/shotgun_tower_3.png" type="Texture" id=5]
[ext_resource path="res://assets/towers/shotgun_tower/shotgun_tower_2.png" type="Texture" id=6]
[ext_resource path="res://assets/towers/shotgun_tower/shotgun_tower_5.png" type="Texture" id=7]
[ext_resource path="res://assets/towers/shotgun_tower/shotgun_tower_4.png" type="Texture" id=8]
[ext_resource path="res://assets/towers/shotgun_tower/shotgun_tower_0.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 9 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 9 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 5 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 5 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 8 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 8 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "battery1",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "battery2",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "battery0",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "battery3",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "battery5",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "battery4",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.95908, 8.01494 )

[node name="ShotgunTower" type="Area2D" groups=[
"Tower",
]]
scale = Vector2( 3, 3 )
z_index = 1
z_as_relative = false
input_pickable = false
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1.45255 )
frames = SubResource( 1 )
animation = "battery5"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.38419e-07 )
shape = SubResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 7.51796, -2.01642 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 7.51796, 0 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 7.51796, 2.01642 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="LaserShootSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -40.0

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = -4.97276
margin_top = -5.98975
margin_right = 195.027
margin_bottom = 20.0102
rect_scale = Vector2( 0.05, 0.05 )
max_value = 3.0
value = 3.0
texture_progress = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MidshotTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_LaserTower_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="MidshotTimer" to="." method="_on_MidshotTimer_timeout"]
